# vulkan-llm

./: .gitignore  README.md  main.py  vulkan.py  vulkan_device.py
cpp/: CMakeLists.txt  compute_add.cpp  compute_add.hpp  device_selector.cpp  device_selector.hpp  device_selector_capi.cpp  main.cpp
cpp/arithmetic/: matmul.cpp  matmul.hpp  op.cpp  op.hpp
cpp/arithmetic/shaders/: add.comp  div.comp  matmul.comp  mul.comp  sub.comp
cpp/shader/: add.comp
vulkan/: __init__.py  _add.py  _device.py
vulkan/arithmetic/: __init__.py  _matmul.py  _op.py
